--- a/README.org
+++ b/README.org
@@ -64,21 +64,21 @@ I generally use =(setq elgantt-timestamps-to-display '(deadline timestamp schedu
 | elgantt-exclusions                                 | This is a list of strings. Do not display any headers that appear in this list.                                                                                                |
 | elgantt-insert-header-even-if-no-timestamp         | Insert the header even if there is no timestamp associated with it.                                                                                                            |
 **** Other custom variables
-| Variable                                       | Default                                                                                                         |
-|------------------------------------------------+-----------------------------------------------------------------------------------------------------------------|
-| elgantt-deadline-character                     | "=▲="                                                                                                             |
-| elgantt-active-timestamp-character             | "=●="                                                                                                             |
-| elgantt-inactive-timestamp-character           | "=⊚="                                                                                                             |
-| elgantt-scheduled-character                    | "=⬟="                                                                                                             |
-| elgantt-multiple-entry-character               | "=☰="                                                                                                             |
-| elgantt-timestamp-range-start-character        | "=▶="                                                                                                             |
-| elgantt-timestamp-range-end-character          | "=◀="                                                                                                             |
-| elgantt-cal-timestamp-range-ia-start-character | "=▷="                                                                                                             |
-| elgantt-timestamp-range-ia-end-character       | "=◁="                                                                                                             |
-| elgantt-agenda-files                           | (org-agenda-files)                                                                                              |
-| elgantt-skip-archives                          | t                                                                                                               |
-| elgantt-start-date                             | (concat (format-time-string "%Y-%m") "-01") (i.e., the current month)                                           |
-| elgantt-header-column-offset                   | 20                                                                                                              |
+| Variable                                       | Default                                                               |
+|------------------------------------------------+-----------------------------------------------------------------------|
+| elgantt-deadline-character                     | "=▲="                                                                   |
+| elgantt-active-timestamp-character             | "=●="                                                                   |
+| elgantt-inactive-timestamp-character           | "=⊚="                                                                   |
+| elgantt-scheduled-character                    | "=⬟="                                                                   |
+| elgantt-multiple-entry-character               | "=☰="                                                                   |
+| elgantt-timestamp-range-start-character        | "=▶="                                                                   |
+| elgantt-timestamp-range-end-character          | "=◀="                                                                   |
+| elgantt-cal-timestamp-range-ia-start-character | "=▷="                                                                   |
+| elgantt-timestamp-range-ia-end-character       | "=◁="                                                                   |
+| elgantt-agenda-files                           | (org-agenda-files)                                                    |
+| elgantt-skip-archives                          | t                                                                     |
+| elgantt-start-date                             | (concat (format-time-string "%Y-%m") "-01") (i.e., the current month) |
+| elgantt-header-column-offset                   | 20                                                                    |
 =elgantt-start-date= is probably the most important one here. This sets the cut-off date for when to ignore old entries. 
 ** Navigation commands
 | Key binding | Command                                        |
@@ -431,20 +431,58 @@ In addition to being able to use numbers to refer to cells by the order in which
 #+begin_src emacs-lisp :results silent
   (require 'elgantt-interaction)
 
-    (elgantt--selection-rule
-     :name colorize
-     :selection-number 2
-     :selection-messages ((1 . "Select first cell")
-                          (2 . "Select second cell"))
-     :execution-functions ((2 . ((elgantt-with-point-at-orig-entry nil
-                                     (org-id-get-create))))
-                           (1 . ((elgantt-with-point-at-orig-entry nil
-                                     (org-set-property "ELGANTT-LINKED-TO" return-val)
-                                   (org-set-property "ELGANTT-COLOR" (concat (s-trim (helm-colors))
-                                                                         " "
-                                                                         (s-trim (helm-colors))))))))
+  (elgantt--selection-rule
+   :name colorize
+   :selection-number 2
+   :selection-messages ((1 . "Select first cell")
+                        (2 . "Select second cell"))
+   :execution-functions ((2 . ((elgantt-with-point-at-orig-entry nil
+                                   (org-id-get-create))))
+                         (1 . ((elgantt-with-point-at-orig-entry nil
+                                   (org-set-property "ELGANTT-LINKED-TO" return-val)
+                                 (org-set-property "ELGANTT-COLOR" (concat (s-trim (helm-colors))
+                                                                           " "
+                                                                           (s-trim (helm-colors)))))))))
+
+;; You’ll also need to use this to colorize 
+(setq elgantt-user-set-color-priority-counter 0) ;; There must be a counter to ensure that overlapping overlays are handled properly
+  (elgantt-create-display-rule user-set-color
+    :parser ((elgantt-color . ((when-let ((colors (org-entry-get (point) "ELGANTT-COLOR")))
+                             (s-split " " colors))))
+             (elgantt-linked-to . ((org-entry-get (point) "ELGANTT-LINKED-TO"))))
+    :args (elgantt-org-id)
+    :body ((when elgantt-linked-to
+             (save-excursion
+               (when-let ((point1 (point))
+                          (point2 (let (date) 
+                          ;; Cells can be linked even if they are not 
+                          ;; in the same header in the calendar. Therefore, 
+                          ;; we have to get the date of the linked cell, and then
+                          ;; move to that date in the current header
+                                    (save-excursion (elgantt--goto-id elgantt-linked-to)
+                                                    (setq date (elgantt-get-date-at-point)))
+                                    (elgantt--goto-date date)
+                                    (point)))
+                          (color1 (car elgantt-color))
+                          (color2 (cadr elgantt-color)))
+                 (when (/= point1 point2)
+                   (elgantt--draw-gradient 
+                    color1
+                    color2
+                    (if (< point1 point2) point1 point2) ;; Since cells are not necessarily linked in 
+                    (if (< point1 point2) point2 point1) ;; chronological order, make sure they are sorted
+                    nil
+                    `(priority ,(setq elgantt-user-set-color-priority-counter
+                                      (1- elgantt-user-set-color-priority-counter))
+                                ;; Decrease the priority so that earlier entries take
+                                ;; precedence over later ones
+                      :elgantt-user-overlay ,elgantt-org-id))))))))
 #+end_src
-Here is a second example I played with previously, which provided a more advanced way to link cells/headings together. You can see the use of =return-val= being passed from one execution function to the next. 
+[[file:screenshots/output-2020-07-21-12:27:23.gif]]
+
+
+
+Here is a second example I played with previously, which provided a more advanced way to link cells/headings together. You can see the use of =return-val= being passed from one execution function to the next. This is included only for the purposes of illustrating how to use the macro. 
 #+begin_src emacs-lisp :results silent
 (elgantt--selection-rule :name set-anchor
 		     :parser ((:elgantt-dependents . ((when-let ((dependents (cdar (org-entry-properties (point)
