--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 * El Gantt – A Gantt chart/calendar for Orgmode
 
-El Gantt creates a Gantt calendar from your orgmode files. It provides a flexible customization system with the goal of being adaptable to multiple purposes. You can move dates, scroll forwrd and backward, jump to the underlying org file, and customize the display. 
+El Gantt creates a Gantt calendar from your orgmode files. It provides a flexible customization system with the goal of being adaptable to multiple purposes. You can move dates, scroll forward and backward, jump to the underlying org file, and customize the display. 
 [[file:screenshots/output-2020-07-20-14:25:27.gif]]
 ** Installation
 Install the dependencies:
@@ -371,7 +371,6 @@ Or some other solution if you don't like =dash=.
 ***** Draw a line from one cell to another with =elgantt--draw-line=. See also =elgantt--connect-cell=. 
 ***** Juxtapose text on top of a cell with =elgantt--insert-juxtaposition= and clear them with =elgantt--clear-juxtapositions=.
 ***** Change the character of a cell (while preserving text properties) with =elgantt--change-char=.
-
 **** Navigating the buffer
 ***** Move to a cell by org-id with =elgantt--goto-id=.
 ***** Move to a date on the current line with =elgantt--goto-date=.
@@ -436,54 +435,54 @@ So, here, the user selects two cells and presses return. Then, the program moves
 
 In addition to being able to use numbers to refer to cells by the order in which they were selected, you can use =all=, =rest=, =all-but-last=, and =last= to refer to the cells and perform operations on them.
 #+begin_src emacs-lisp :results silent
-  (require 'elgantt-interaction)
+    (require 'elgantt-interaction)
 
-  (elgantt--selection-rule
-   :name colorize
-   :selection-number 2
-   :selection-messages ((1 . "Select first cell")
-                        (2 . "Select second cell"))
-   :execution-functions ((2 . ((elgantt-with-point-at-orig-entry nil
-                                   (org-id-get-create))))
-                         (1 . ((elgantt-with-point-at-orig-entry nil
-                                   (org-set-property "ELGANTT-LINKED-TO" return-val)
-                                 (org-set-property "ELGANTT-COLOR" (concat (s-trim (helm-colors))
-                                                                           " "
-                                                                           (s-trim (helm-colors)))))))))
+    (elgantt--selection-rule
+     :name colorize
+     :selection-number 2
+     :selection-messages ((1 . "Select first cell")
+                          (2 . "Select second cell"))
+     :execution-functions ((2 . ((elgantt-with-point-at-orig-entry nil
+                                     (org-id-get-create))))
+                           (1 . ((elgantt-with-point-at-orig-entry nil
+                                     (org-set-property "ELGANTT-LINKED-TO" return-val)
+                                   (org-set-property "ELGANTT-COLOR" (concat (s-trim (helm-colors))
+                                                                             " "
+                                                                             (s-trim (helm-colors)))))))))
 
-;; You’ll also need to use this to colorize 
-(setq elgantt-user-set-color-priority-counter 0) ;; There must be a counter to ensure that overlapping overlays are handled properly
-  (elgantt-create-display-rule user-set-color
-    :parser ((elgantt-color . ((when-let ((colors (org-entry-get (point) "ELGANTT-COLOR")))
-                             (s-split " " colors))))
-             (elgantt-linked-to . ((org-entry-get (point) "ELGANTT-LINKED-TO"))))
-    :args (elgantt-org-id)
-    :body ((when elgantt-linked-to
-             (save-excursion
-               (when-let ((point1 (point))
-                          (point2 (let (date) 
-                          ;; Cells can be linked even if they are not 
-                          ;; in the same header in the calendar. Therefore, 
-                          ;; we have to get the date of the linked cell, and then
-                          ;; move to that date in the current header
-                                    (save-excursion (elgantt--goto-id elgantt-linked-to)
-                                                    (setq date (elgantt-get-date-at-point)))
-                                    (elgantt--goto-date date)
-                                    (point)))
-                          (color1 (car elgantt-color))
-                          (color2 (cadr elgantt-color)))
-                 (when (/= point1 point2)
-                   (elgantt--draw-gradient 
-                    color1
-                    color2
-                    (if (< point1 point2) point1 point2) ;; Since cells are not necessarily linked in 
-                    (if (< point1 point2) point2 point1) ;; chronological order, make sure they are sorted
-                    nil
-                    `(priority ,(setq elgantt-user-set-color-priority-counter
-                                      (1- elgantt-user-set-color-priority-counter))
-                                ;; Decrease the priority so that earlier entries take
-                                ;; precedence over later ones
-                      :elgantt-user-overlay ,elgantt-org-id))))))))
+  ;; You’ll also need to use this to colorize 
+  (setq elgantt-user-set-color-priority-counter 0) ;; There must be a counter to ensure that overlapping overlays are handled properly
+    (elgantt-create-display-rule user-set-color
+      :parser ((elgantt-color . ((when-let ((colors (org-entry-get (point) "ELGANTT-COLOR")))
+                               (s-split " " colors))))
+               (elgantt-linked-to . ((org-entry-get (point) "ELGANTT-LINKED-TO"))))
+      :args (elgantt-org-id)
+      :body ((when elgantt-linked-to
+               (save-excursion
+                 (when-let ((point1 (point))
+                            (point2 (let (date) 
+                            ;; Cells can be linked even if they are not 
+                            ;; in the same header in the calendar. Therefore, 
+                            ;; we have to get the date of the linked cell, and then
+                            ;; move to that date in the current header
+                                      (save-excursion (elgantt--goto-id elgantt-linked-to)
+                                                      (setq date (elgantt-get-date-at-point)))
+                                      (elgantt--goto-date date)
+                                      (point)))
+                            (color1 (car elgantt-color))
+                            (color2 (cadr elgantt-color)))
+                   (when (/= point1 point2)
+                     (elgantt--draw-gradient 
+                      color1
+                      color2
+                      (if (< point1 point2) point1 point2) ;; Since cells are not necessarily linked in 
+                      (if (< point1 point2) point2 point1) ;; chronological order, make sure they are sorted
+                      nil
+                      `(priority ,(setq elgantt-user-set-color-priority-counter
+                                        (1- elgantt-user-set-color-priority-counter))
+                                  ;; Decrease the priority so that earlier entries take
+                                  ;; precedence over later ones
+                        :elgantt-user-overlay ,elgantt-org-id))))))))
 #+end_src
 [[file:screenshots/output-2020-07-21-12:27:23.gif]]
 
