--- a/README.org
+++ b/README.org
@@ -518,7 +518,8 @@ I’ll save you the trouble of finishing your thought:
 
 [[file:screenshots/code_quality.png]]
 
-This is a hobby and a continued exercise in learning elisp and programming, and I realized a lot of things along the way. Mostly, I realized that programming is not as much fun as I thought it was, and takes way more time than it should. I don’t have the patience to clean up the code like I should. There are byte-compile warnings. I do not care. 
+This is a hobby and a continued exercise in learning elisp and programming, and I realized a lot of things along the way. Mostly, I realized that programming is not as much fun as I thought it was, and takes way more time than it should. I don’t have the patience to clean up the code like I should. There are byte-compile warnings. I do not care. I am hoping that publishing this gets it out of my life.
 *** Can you fold and unfold without reloading?
 Not without significant changes to the code, or breaking other existing features. 
+
 
