header-line comment expanded

--- a/README.org
+++ b/README.org
@@ -51,18 +51,18 @@ Set the variable =elgantt-timestamps-to-display= to control what types of timest
 The order of the list matters determined precedence. Only the first type of entry found in a heading will be displayed with a character. 
 I generally use =(setq elgantt-timestamps-to-display '(deadline timestamp scheduled timestamp-range))=
 **** Display options
-| Value                                              | Behavior                                                                                                                                                                       |
-| elgantt-startup-folded                             | If non-nil, display all entries, grouped by header-type, on a single line; otherwise, entries are grouped under a header with one entry per line                               |
-| elgantt-show-header-depth                          | If elgantt-header-type is set to 'outline, then show the outline depth by inserting elgantt-level-prefix-char. If elgantt-header-type is not 'outline, then this has no effect |
-| elgantt-level-prefix-char                          | The character used to prefix nested entries.                                                                                                                                   |
-| elgantt-even-numbered-line-change                  | This controls how much the percent the even numbered lines are offset from the background color; set to 0 if you don't want any distinction                                    |
-| elgantt-scroll-to-current-month-at-startup         | Scroll to the current month at startup, or keep the calendar at the first timestamp                                                                                            |
-| elgantt-insert-blank-line-between-top-level-header | Just what it says.                                                                                                                                                             |
-| elgantt-draw-overarching-headers                   | Draw a line bracketing the start and end dates for the children of and top-level headers, assuming there is no date already associated with the header.                        |
-| elgantt-header-column-offset                       | The width of the header column.                                                                                                                                                |
-| elgantt-header-line-format                         | This is currently a mess and needs to be fixed. I will write something that makes it easy to customize what data is shown in the header.                                       |
-| elgantt-exclusions                                 | This is a list of strings. Do not display any headers that appear in this list.                                                                                                |
-| elgantt-insert-header-even-if-no-timestamp         | Insert the header even if there is no timestamp associated with it.                                                                                                            |
+| Value                                              | Behavior                                                                                                                                                                                                           |
+| elgantt-startup-folded                             | If non-nil, display all entries, grouped by header-type, on a single line; otherwise, entries are grouped under a header with one entry per line                                                                   |
+| elgantt-show-header-depth                          | If elgantt-header-type is set to 'outline, then show the outline depth by inserting elgantt-level-prefix-char. If elgantt-header-type is not 'outline, then this has no effect                                     |
+| elgantt-level-prefix-char                          | The character used to prefix nested entries.                                                                                                                                                                       |
+| elgantt-even-numbered-line-change                  | This controls how much the percent the even numbered lines are offset from the background color; set to 0 if you don't want any distinction                                                                        |
+| elgantt-scroll-to-current-month-at-startup         | Scroll to the current month at startup, or keep the calendar at the first timestamp                                                                                                                                |
+| elgantt-insert-blank-line-between-top-level-header | Just what it says.                                                                                                                                                                                                 |
+| elgantt-draw-overarching-headers                   | Draw a line bracketing the start and end dates for the children of and top-level headers, assuming there is no date already associated with the header.                                                            |
+| elgantt-header-column-offset                       | The width of the header column.                                                                                                                                                                                    |
+| elgantt-header-line-format                         | This is currently a mess and needs to be fixed. I will write something that makes it easy to customize what data is shown in the header. Until then, refer to the documentation for the header-line and good luck. |
+| elgantt-exclusions                                 | This is a list of strings. Do not display any headers that appear in this list.                                                                                                                                    |
+| elgantt-insert-header-even-if-no-timestamp         | Insert the header even if there is no timestamp associated with it.                                                                                                                                                |
 **** Other custom variables
 | Variable                                       | Default                                                               |
 |------------------------------------------------+-----------------------------------------------------------------------|
